<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textColor="#388E3C"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="20sp"
        android:layout_below="@id/tvProfile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textColor="#388E3C"/>

    <ImageView
        android:id="@+id/ivProfilePicture"
        android:layout_width="158dp"
        android:layout_height="164dp"
        android:layout_below="@id/tvName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:contentDescription="Foto de perfil"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/btnChangeProfilePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ivProfilePicture"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/change_profile_photo"
        android:textColor="#263238" />

    <TextView
        android:id="@+id/tvPersonalInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal_info"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@id/btnChangeProfilePicture"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/tvPersonalInfo"
        android:background="@drawable/rounded_background"
        android:padding="16dp"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/professional_id_hint"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_domicilio"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_numero_telefono"
            android:layout_marginBottom="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_correo_electronico"
            android:layout_marginBottom="8dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/back"
        android:textColor="#263238" />
</RelativeLayout>



