<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/titulo_nuevo_cliente"
            android:textColor="#48994B"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="24dp"
            android:text="@string/subtitulo_ingreso_datos" />

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bgn_nuevocliente"
            android:orientation="vertical"
            android:padding="8dp">

            <!-- Nombre completo input -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:text="@string/seccion_datos_personales"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etNombreCompleto"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp"
                android:alpha="0.5"
                android:autofillHints="name"
                android:background="@drawable/rectangle_color"
                android:hint="@string/hint_nombre_completo"
                android:inputType="textPersonName" />


            <!-- Número de teléfono input -->
            <EditText
                android:id="@+id/etNumeroTelefono"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp"
                android:alpha="0.5"
                android:autofillHints="phone"
                android:background="@drawable/rectangle_color"
                android:hint="@string/hint_numero_telefono"
                android:inputType="phone" />

            <!-- Correo electrónico input -->
            <EditText
                android:id="@+id/etCorreoElectronico"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp"
                android:alpha="0.5"
                android:autofillHints="emailAddress"
                android:background="@drawable/rectangle_color"
                android:hint="@string/hint_correo_electronico"
                android:inputType="textEmailAddress" />

            <!-- Domicilio input -->
            <EditText
                android:id="@+id/etDomicilio"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp"
                android:alpha="0.5"
                android:autofillHints="postalAddress"
                android:background="@drawable/rectangle_color"
                android:hint="@string/hint_domicilio"
                android:inputType="textPostalAddress" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:text="@string/seccion_datos_medicos"
                android:textStyle="bold" />


            <!-- Tipo de sangre input -->
            <EditText
                android:id="@+id/etTipoSangre"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp"
                android:alpha="0.5"
                android:autofillHints=""
                android:background="@drawable/rectangle_color"
                android:hint="@string/hint_tipo_sangre"
                android:inputType="text" />

            <EditText
                android:id="@+id/etAlergias"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp"
                android:alpha="0.5"
                android:autofillHints=""
                android:background="@drawable/rectangle_color"
                android:hint="@string/hint_alergias"
                android:inputType="text" />

            <!-- Enfermedades crónicas input -->
            <EditText
                android:id="@+id/etEnfermedadesCronicas"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp"
                android:alpha="0.5"
                android:background="@drawable/rectangle_color"
                android:hint="@string/hint_enfermedades_cronicas"
                android:importantForAutofill="no"
                android:inputType="text" />

            <!-- Tratamiento médico input -->
            <EditText
                android:id="@+id/etTratamientoMedico"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp"
                android:alpha="0.5"
                android:autofillHints=""
                android:background="@drawable/rectangle_color"
                android:hint="@string/hint_tratamiento_medico"
                android:inputType="text" />

            <!-- Finalizar button -->

        </LinearLayout>
        <Button
            android:id="@+id/btnFinalizar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_salir"
            android:backgroundTint="#4CAF50"
            android:fontFamily="@font/jockey_one"
            android:text="@string/texto_boton_finalizar"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>
</ScrollView>
