<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal">

    <!-- Email Input -->
    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:minHeight="48dp"
        android:padding="12dp"
        android:layout_marginBottom="24dp"/>

    <!-- Password Input -->
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:minHeight="48dp"
        android:padding="12dp"
        android:layout_marginBottom="24dp"/>

    <!-- Login Button -->
    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:minHeight="48dp"
        android:padding="12dp"
        android:text="@string/login"
        android:textColor="#8E24AA"
        android:theme="@style/Widget.MaterialComponents.Button.UnelevatedButton" />

    <!-- Register Text Link -->
    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:padding="12dp"
        android:text="@string/register"
        android:textColor="#2962FF"
        android:textSize="18sp" />

</LinearLayout>
