<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8F5E9">

    <TextView
        android:id="@+id/tvTermsAndConditionsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_and_conditions"
        android:textSize="24sp"
        android:textColor="#388E3C"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tvTermsAndConditionsTitle"
        android:layout_above="@+id/btnBack"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="60dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/terms_and_conditions_content"
            android:textColor="#000000"
            android:background="#FFFFFF"/>
    </ScrollView>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="42dp"
        android:background="#4CAF50"
        android:text="@string/back"
        android:textColor="#263238" />
</RelativeLayout>
